--- a/wm/.config/hypr/hyprland.conf
+++ b/wm/.config/hypr/hyprland.conf
@@ -10,6 +10,8 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor = eDP-1,2880x1800@90,auto,2
 
+env=set $WOBSOCK $XDG_RUNTIME_DIR/wob.sock
+
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = dbus-update-activation-environment --all
 # exec-once = xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
@@ -20,6 +22,7 @@ exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 exec-once = swayidle -w timeout 60 'swaylock -f -c 000000' timeout 300 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' before-sleep 'swaylock -f -c 000000'
 exec = swaybg -i ~/wallpaper.jpg -m fill
 exec = pkill waybar; waybar
+exec = rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | wob
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -127,12 +130,12 @@ bind = $mainMod, V, exec, cliphist list | tofi --prompt-text "Clip: " | cliphist
 bind = $mainMod, L, exec, swaylock
 
 # Keyboard Control Function
-binde = , XF86AudioRaiseVolume, exec, pactl -- set-sink-volume 0 +1%
-binde = , XF86AudioLowerVolume, exec, pactl -- set-sink-volume 0 -1%
+binde = , XF86AudioRaiseVolume, exec, pactl -- set-sink-volume 0 +1% && pactl get-sink-volume @DEFAULT_SINK@ | head -n 1| awk '{print substr($5, 1, length($5)-1)}' > $WOBSOCK
+binde = , XF86AudioLowerVolume, exec, pactl -- set-sink-volume 0 -1% && pactl get-sink-volume @DEFAULT_SINK@ | head -n 1| awk '{print substr($5, 1, length($5)-1)}' > $WOBSOCK
 binde = , XF86AudioMute, exec, pactl -- set-sink-mute 0 toggle
 binde = , XF86AudioMicMute, exec, pactl -- set-source-mute 0 toggle
-binde = , XF86MonBrightnessUp, exec, light -A 5
-binde = , XF86MonBrightnessDown, exec, light -U 5
+binde = , XF86MonBrightnessUp, exec, light -A 5 && light -G | cut -d'.' -f1 > $WOBSOCK
+binde = , XF86MonBrightnessDown, exec, light -U 5 && light -G | cut -d'.' -f1 > $WOBSOCK
 
 binde = , XF86AudioPlay, exec, playerctl play-pause
 binde = , XF86AudioNext, exec, playerctl next
