--- a/wm/.config/hypr/hyprland.conf
+++ b/wm/.config/hypr/hyprland.conf
@@ -23,6 +23,7 @@ exec-once = swayidle -w timeout 60 'swaylock -f -c 000000' timeout 300 'hyprctl 
 exec = swaybg -i ~/wallpaper.jpg -m fill
 exec = pkill waybar; waybar
 exec = rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | wob
+exec = /home/chauncey/.scripts/gsettings.sh
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -97,6 +98,9 @@ device:m585 mouse V1 {
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # windowrulev2 = maximize,class:^(firefox)$
 windowrulev2 = float,class:^(org.telegram.desktop)$
+windowrulev2 = float,class:^(org.fcitx.fcitx5-config-qt)$
+windowrulev2 = float,class:^(Element)$
+windowrulev2 = float,class:^(steam)$
 windowrulev2 = float,class:^(org.qbittorrent.qBittorrent)$
 windowrulev2 = float,class:^(org.wireshark.Wireshark)$
 windowrulev2 = float,class:^(mpv)$
