fix(font): fix nerd font icon is smaller than font;
see more: https://github.com/ryanoasis/nerd-fonts/issues/127

--- a/terminal/.config/alacritty/alacritty.yml
+++ b/terminal/.config/alacritty/alacritty.yml
@@ -28,7 +28,7 @@ scrolling:
 
 font:
     normal:
-      family: "Jetbrains Mono Nerd Font"
+      family: "monospace"
       style: Regular
     size: 13
     #  bold:
