chore(wm): add wob.sock setting; disable hyprland blur; fix waybar style;

--- a/wm/.config/waybar/config
+++ b/wm/.config/waybar/config
@@ -28,6 +28,7 @@
         "memory",
         //"temperature",
         "pulseaudio",
+        "backlight",
         "battery",
         "clock",
     ],
@@ -38,13 +39,13 @@
     },
 
     "custom/spaceleft":{
-        "format": " ",
+        "format": "",
         /* "on-click": "wlogout", */
         "tooltip":false,
     },
 
     "custom/recorder":{
-        "format": " ",
+        "format": "",
         "on-click": "/home/chauncey/.config/waybar/scripts/recorder.sh",
         "tooltip":false,
     },
@@ -82,7 +83,7 @@
 
     "disk": {
         "interval": 30,
-        "format": "{free}",
+        "format": " {free}",
         "path": "/",
         "on-click": "alacritty -t 'LF Manager' -e lf"
     },
@@ -95,7 +96,7 @@
         },
         // Connected to AC
         /* "format": "  {icon}  {capacity}%", // Icon: bolt */
-        "format": "{capacity}%", // Icon: bolt
+        "format": " {capacity}%", // Icon: bolt
 
         // Not connected to AC
         "format-discharging": "{icon} {capacity}%",
@@ -183,23 +184,16 @@
         "on-scroll-down": "hyprctl dispatch workspace e-1",
         "format-icons":{
             /*     ﱘ  */
-            "1":"",
-            "2":"",
-            "3":"",
-            "4":"",
-            "5":"",
-            "6":"",
+            "1":"",
+            "2":"",
+            "3":"",
+            "4":"ﬄ",
+            "5":"﬐",
+            "6":"",
             "7":"",
             "8":"",
             "9":"",
             "10":"",
-            "11":"",
-            "12":"",
-            "13":"",
-            "14":"ﬄ",
-            "15":"﬐",
-            "16":"",
-            "default": "",
         },
         "sort-by-number":true
     },
@@ -220,6 +214,13 @@
         "on-click-middle": "pavucontrol",
         "on-click-right": "pactl set-source-mute @DEFAULT_SOURCE@ toggle",
         "tooltip": false
+    },
+
+    "backlight": {
+        "device": "intel_backlight",
+        "format": "{icon} {percent}%",
+        "format-icons": ["", "", "", "", "", "", "", "", ""],
+        "on-click": "",
     },
 
     "temperature": {
@@ -243,3 +244,4 @@
         
 }
 
+/* vim: set ft=json: */
