--- a/wm/.config/hypr/hyprland.conf
+++ b/wm/.config/hypr/hyprland.conf
@@ -10,16 +10,17 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor = eDP-1,2880x1800@90,auto,2
 
-env=set $WOBSOCK $XDG_RUNTIME_DIR/wob.sock
+# used by wob
+env = WOBSOCK, $XDG_RUNTIME_DIR/wob.sock
 
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = dbus-update-activation-environment --all
 # exec-once = xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
 exec-once = mako
 exec-once = env LANG=zh_CN.UTF-8 fcitx5 -d
-exec-once = wl-paste --type text -o --watch cliphist store #Stores only text data
+exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
-exec-once = swayidle -w timeout 60 'swaylock -f -c 000000' timeout 300 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' before-sleep 'swaylock -f -c 000000'
+exec-once = swayidle -w timeout 300 'swaylock -f -c 000000' timeout 360 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' before-sleep 'swaylock -f -c 000000'
 exec = swaybg -i ~/wallpaper.jpg -m fill
 exec = pkill waybar; waybar
 exec = rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | wob
@@ -33,7 +34,7 @@ input {
     kb_layout = us
     kb_variant =
     kb_model =
-    kb_options =
+    kb_options = caps:escape 
     kb_rules =
 
     follow_mouse = 1
@@ -60,7 +61,7 @@ general {
 decoration {
     rounding = 4
     multisample_edges = true
-    blur = true
+    blur = false
     blur_new_optimizations = true
 }
 
@@ -85,7 +86,7 @@ gestures {
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-device:m585 mouse V1 {
+device:m585 {
     sensitivity = -0.5
     repeat_rate = 50
     repeat_delay = 500
@@ -104,7 +105,6 @@ windowrulev2 = float,class:^(steam)$
 windowrulev2 = float,class:^(org.qbittorrent.qBittorrent)$
 windowrulev2 = float,class:^(org.wireshark.Wireshark)$
 windowrulev2 = float,class:^(mpv)$
-windowrulev2 = float,class:^(obsidian)$
 windowrulev2 = float,class:^(steam)$
 windowrulev2 = float,class:^(anki)$
 windowrulev2 = float,class:^(GoldenDict)$
@@ -120,8 +120,8 @@ $mainMod = SUPER
 bind = CTRL_ALT, Backspace, exit,
 
 bind = $mainMod, T, exec, [float] alacritty
-bind = $mainMod, O, exec, [workspace 11] obsidian
-bind = $mainMod, B, exec, [workspace 13] firefox
+bind = $mainMod, O, exec, [workspace 1] obsidian
+bind = $mainMod, B, exec, [workspace 3] firefox
 bind = $mainMod, C, killactive,
 bind = $mainMod, E, exec, alacritty -t 'LF Manager' -e lf
 bind = $mainMod, F, togglefloating,
@@ -201,7 +201,3 @@ binde=,j,resizeactive,0 10
 bind=,escape,submap,reset 
 # will reset the submap, meaning end the current one and return to the global one
 submap=reset
-
-# blur
-blurls = notifications
-blurls = waybar
