chore: update conf

--- a/wm/.config/hypr/hyprland.conf
+++ b/wm/.config/hypr/hyprland.conf
@@ -8,7 +8,7 @@
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor = eDP-1,2880x1800@90,auto,2
+monitor = eDP-1,2880x1800@90,auto,2,bitdepth,10
 
 # used by wob
 env = WOBSOCK, $XDG_RUNTIME_DIR/wob.sock
@@ -100,6 +100,9 @@ device:m585 {
 # windowrulev2 = maximize,class:^(firefox)$
 windowrulev2 = float,class:^(org.telegram.desktop)$
 windowrulev2 = float,class:^(org.fcitx.fcitx5-config-qt)$
+windowrulev2 = float,class:^(firefox)$,title:^(Library)$
+windowrulev2 = float,class:^transmission*
+windowrulev2 = size 50%, 50%,class:^transmission*
 windowrulev2 = float,class:^(Element)$
 windowrulev2 = float,class:^(steam)$
 windowrulev2 = float,class:^(org.qbittorrent.qBittorrent)$
@@ -111,6 +114,7 @@ windowrulev2 = float,class:^(GoldenDict)$
 windowrulev2 = float,title:^(LF Manager)$
 windowrulev2 = float,title:^(Htop)$
 windowrulev2 = float,title:^Blender*
+windowrulev2 = workspace 4 silent,class:^(mpv)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
@@ -120,8 +124,8 @@ $mainMod = SUPER
 bind = CTRL_ALT, Backspace, exit,
 
 bind = $mainMod, T, exec, [float] alacritty
-bind = $mainMod, O, exec, [workspace 1] obsidian
-bind = $mainMod, B, exec, [workspace 3] firefox
+bind = $mainMod, O, exec, [workspace 3] obsidian
+bind = $mainMod, B, exec, [workspace 1] firefox
 bind = $mainMod, C, killactive,
 bind = $mainMod, E, exec, alacritty -t 'LF Manager' -e lf
 bind = $mainMod, F, togglefloating,
