--- a/wm/.config/mpv/mpv.conf
+++ b/wm/.config/mpv/mpv.conf
@@ -9,11 +9,12 @@ msg-module=yes                          # prepend module name to log messages
 term-osd-bar=yes                        # displays a progress bar on the terminal
 
 # ===== Video =====
-gpu-context        = wayland
-gpu-api            = vulkan
-autofit-larger     = 75%x75% 
-hwdec              = auto
-vo                 = gpu-next,
+gpu-context=wayland
+gpu-api=vulkan
+autofit-larger=75%x75% 
+hwdec=auto
+# hwdec-codecs=all
+# vo=gpu # <gpu|gpu-next>
 
 
 # ===== OSD =====
