--- a/wm/.config/gtk-3.0/settings.ini
+++ b/wm/.config/gtk-3.0/settings.ini
@@ -1,8 +1,8 @@
 [Settings]
 gtk-theme-name=WhiteSur-Light
 gtk-icon-theme-name=WhiteSur
-gtk-font-name=Noto Sans CJK SC 10
-gtk-cursor-theme-name=Adwaita
+gtk-font-name=Sans 10
+gtk-cursor-theme-name=WhiteSur-cursors
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
