--- a/terminal/.config/terminator/config
+++ b/terminal/.config/terminator/config
@@ -5,7 +5,7 @@
     background_color = "#1a1b26"
     background_darkness = 0.9
     cursor_shape = ibeam
-    font = Jetbrains Mono 12
+    font = monospace 12
     foreground_color = "#c0caf5"
     show_titlebar = False
     scrollbar_position = hidden
@@ -31,7 +31,7 @@
     background_color = "#1e1e2e"
     background_image = None
     cursor_shape = ibeam
-    font = JetBrainsMono Nerd Font 12
+    font = Monospace 12
     foreground_color = "#cdd6f4"
     show_titlebar = False
     scrollbar_position = hidden
