chore(fcitx5): update fcitx5 config;

--- a/fcitx5/.config/fcitx5/conf/classicui.conf
+++ b/fcitx5/.config/fcitx5/conf/classicui.conf
@@ -5,11 +5,11 @@ PerScreenDPI=True
 # 使用鼠标滚轮翻页
 WheelForPaging=True
 # 字体
-Font="JetBrains Mono 10"
+Font="Monospace 10"
 # 菜单字体
-MenuFont="Noto Sans CJK SC 10"
+MenuFont="Sans Serif 10"
 # 托盘字体
-TrayFont="Noto Sans CJK SC Bold 10"
+TrayFont="Sans Serif 10"
 # 托盘标签轮廓颜色
 TrayOutlineColor=#000000
 # 托盘标签文本颜色
