--- a/fcitx5/.config/fcitx5/config
+++ b/fcitx5/.config/fcitx5/config
@@ -1,11 +1,11 @@
 [Hotkey]
-# Enumerate when press trigger key repeatedly
+# 反复按切换键时进行轮换
 EnumerateWithTriggerKeys=True
-# Skip first input method while enumerating
+# 轮换输入法时跳过第一个输入法
 EnumerateSkipFirst=False
-# Activate Input Method
+# 激活输入法
 ActivateKeys=
-# Deactivate Input Method
+# 取消激活输入法
 DeactivateKeys=
 
 [Hotkey/TriggerKeys]
@@ -42,25 +42,25 @@ DeactivateKeys=
 0=Control+Alt+P
 
 [Behavior]
-# Active By Default
+# 默认状态为激活
 ActiveByDefault=False
-# Share Input State
+# 共享输入状态
 ShareInputState=Program
-# Show preedit in application
+# 在程序中显示预编辑文本
 PreeditEnabledByDefault=True
-# Show Input Method Information when switch input method
+# 切换输入法时显示输入法信息
 ShowInputMethodInformation=True
-# Show Input Method Information when changing focus
+# 在焦点更改时显示输入法信息
 showInputMethodInformationWhenFocusIn=False
-# Show compact input method information
+# 显示紧凑的输入法信息
 CompactInputMethodInformation=True
-# Show first input method information
+# 显示第一个输入法的信息
 ShowFirstInputMethodInformation=True
-# Default page size
+# 默认页大小
 DefaultPageSize=5
-# Override Xkb Option
+# 覆盖 Xkb 选项
 OverrideXkbOption=False
-# Custom Xkb Option
+# 自定义 Xkb 选项
 CustomXkbOption=
 # Force Enabled Addons
 EnabledAddons=
@@ -70,5 +70,8 @@ PreloadInputMethod=True
 [Behavior/DisabledAddons]
 0=chttrans
 1=clipboard
-2=table
+2=fcitx4frontend
+3=fullwidth
+4=kimpanel
+5=table
 
