--- a/wm/.config/hypr/hyprland.conf
+++ b/wm/.config/hypr/hyprland.conf
@@ -15,15 +15,16 @@ env = WOBSOCK, $XDG_RUNTIME_DIR/wob.sock
 
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = dbus-update-activation-environment --all
-# exec-once = xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
+exec-once = xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
 exec-once = mako
 exec-once = env LANG=zh_CN.UTF-8 fcitx5 -d
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 exec-once = swayidle -w timeout 300 'swaylock -f -c 000000' timeout 360 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' before-sleep 'swaylock -f -c 000000'
+exec-once = rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | wob
+exec-once = libinput-gestures
 exec = swaybg -i ~/wallpaper.jpg -m fill
 exec = pkill waybar; waybar
-exec = rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | wob
 exec = /home/chauncey/.scripts/gsettings.sh
 
 # Source a file (multi-file configs)
@@ -61,9 +62,11 @@ general {
 decoration {
     rounding = 4
     multisample_edges = true
-    blur = false
+    blur = true
     blur_new_optimizations = true
 }
+
+blurls = waybar
 
 animations {
     enabled = true
@@ -123,7 +126,7 @@ $mainMod = SUPER
 # bind=MODS,key,dispatcher,params
 bind = CTRL_ALT, Backspace, exit,
 
-bind = $mainMod, T, exec, [float] alacritty
+bind = $mainMod, T, exec, [workspace 2] alacritty
 bind = $mainMod, O, exec, [workspace 3] obsidian
 bind = $mainMod, B, exec, [workspace 1] firefox
 bind = $mainMod, C, killactive,
@@ -186,7 +189,6 @@ bind = $mainMod, mouse_up, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
 
 # will switch to a submap called resize
 bind=$mainMod,S,submap,resize
