--- a/wm/.config/wayfire.ini
+++ b/wm/.config/wayfire.ini
@@ -18,17 +18,6 @@ mode = 3840x2160@60
 #position=
 transform = normal
 scale = 2
-#
-# You can get the names of your outputs with wlr-randr.
-# https://github.com/emersion/wlr-randr
-#
-# See also kanshi for configuring your outputs automatically.
-# https://wayland.emersion.fr/kanshi/
-#
-# See Output options for a complete reference.
-# https://github.com/WayfireWM/wayfire/wiki/Configuration#output
-
-# Core options ─────────────────────────────────────────────────────────────────
 
 [core]
 
@@ -77,7 +66,7 @@ close_top_view = <super> KEY_C | <alt> KEY_F4
 preferred_decoration_mode = server
 
 # xwayland
-xwayland = true
+xwayland = false
 
 [animate]
 close_animation = zoom
@@ -152,47 +141,21 @@ toggle = <super> <ctrl> KEY_F
 # Needed by some GTK applications
 # 01_xdp=/usr/libexec/xdg-desktop-portal
 # 02_xdpg=/usr/libexec/xdg-desktop-portal-gtk
-03_xdpw=/usr/libexec/xdg-desktop-portal-wlr
+# 03_xdpw=/usr/libexec/xdg-desktop-portal-wlr
 # 解决软件启动慢
 environment = dbus-update-activation-environment --systemd WAYLAND_DISPLAY DISPLAY XAUTHORITY
-# xwayland scale
 xwayland01 = xprop -root -format _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
 xwayland02 = xrdb ~/.Xresources
 autostart_wf_shell = false
-panel = waybar
-backgroud = swaybg -i ~/wallpaper.jpg -m fill
-fcitx5 = env LANG=zh_CN.UTF-8 fcitx5
-copyq = copyq --start-server
-theme = ~/.scripts/setTheme.sh
-route = ~/.scripts/route.sh
-# clash = ssr-subscribe.sh
-# taskmaid = taskmaid
-
-# Set the wallpaper, start a panel and dock if you want one.
-# https://github.com/WayfireWM/wf-shell
-#
-# These are started by the autostart_wf_shell option above.
-#
-# background = wf-background
-# panel = wf-panel
-# dock = wf-dock
-
-# Output configuration
-# https://wayland.emersion.fr/kanshi/
-#outputs = kanshi
-
-# Notifications
-# mako dunst
+panel = pkill waybar; waybar
 notifications = mako
-
-# Screen color temperature
-# https://sr.ht/~kennylevinsen/wlsunset/
+backgroud = swaybg -i ~/wallpaper.jpg -m fill
+fcitx5 = env LANG=zh_CN.UTF-8 fcitx5 -d
+theme = ~/.scripts/gsettings.sh
+clipboard = wl-paste --type text --watch cliphist store
+gestures = libinput-gestures
 gamma = wlsunset
-
-# Idle configuration
-# https://github.com/swaywm/swayidle
-# https://github.com/swaywm/swaylock
-idle = swayidle before-sleep 'lockscreen --no-dpms' lock lockscreen timeout 600 lockscreen
+idle = swayidle -w timeout 300 'swaylock -f -c 000000' timeout 360 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' before-sleep 'swaylock -f -c 000000'
 
 # Example configuration:
 #
@@ -213,11 +176,8 @@ mode = cascade
 
 # Start a terminal
 # https://github.com/alacritty/alacritty
-# alacritty在wayland下不支持输入法 
 binding_terminal = <super> KEY_T
 command_terminal = alacritty 
-binding_terminal_x11 = <super> <shift> KEY_T
-command_terminal_x11 = terminator 
 
 bind_translate = <super> <shift> KEY_F
 command_translate = wl-paste | trans :zh | notify-send
@@ -226,14 +186,14 @@ command_translate = wl-paste | trans :zh | notify-send
 # https://hg.sr.ht/~scoopta/wofi
 # Note: Add mode=run or mode=drun to ~/.config/wofi/config.
 # You can also specify the mode with --show option.
-binding_wofi = <super> KEY_R
-command_wofi = wofi --show drun --width 32% --heigh 32% 
+binding_broswer = <super> KEY_B
+command_broswer = firefox
 
-binding_rofi = <super> <shift> KEY_R
-command_rofi = rofi -wayland -show drun
+binding_tofi = <super> KEY_R
+command_tofi = tofi-drun --prompt-text "drun" | xargs sh -c
 
 binding_note = <super> KEY_O
-command_note = env XCURSOR_SIZE=48 obsidian
+command_note = obsidian
 
 # Screen locker
 # https://github.com/swaywm/swaylock
