--- a/wm/.config/hypr/hyprland.conf
+++ b/wm/.config/hypr/hyprland.conf
@@ -15,7 +15,7 @@ env = WOBSOCK, $XDG_RUNTIME_DIR/wob.sock
 
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = dbus-update-activation-environment --all
-exec-once = xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
+# exec-once = xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
 exec-once = mako
 exec-once = env LANG=zh_CN.UTF-8 fcitx5 -d
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
@@ -38,10 +38,13 @@ input {
     kb_options = caps:escape 
     kb_rules =
 
+    repeat_rate = 40
+    repeat_delay = 500
+
     follow_mouse = 1
 
     touchpad {
-        natural_scroll = false
+        natural_scroll = true
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
@@ -50,10 +53,10 @@ input {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 1
+    gaps_in = 0
     gaps_out = 0
     border_size = 2
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.active_border = rgba(33ccffee)
     col.inactive_border = rgba(595959aa)
 
     layout = dwindle
@@ -85,14 +88,6 @@ master {
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     workspace_swipe = true
-}
-
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-device:m585 {
-    sensitivity = -0.5
-    repeat_rate = 50
-    repeat_delay = 500
 }
 
 # Example windowrule v1
@@ -127,6 +122,7 @@ $mainMod = SUPER
 bind = CTRL_ALT, Backspace, exit,
 
 bind = $mainMod, T, exec, [workspace 2] alacritty
+bind = SUPER_SHIFT, T, exec, [float] alacritty
 bind = $mainMod, O, exec, [workspace 3] obsidian
 bind = $mainMod, B, exec, [workspace 1] firefox
 bind = $mainMod, C, killactive,
@@ -139,6 +135,10 @@ bind = $mainMod, A, exec, slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g -
 
 bind = $mainMod, V, exec, cliphist list | tofi --prompt-text "Clip: " | cliphist decode | wl-copy
 bind = $mainMod, L, exec, swaylock
+
+# to switch between windows in a floating workspace
+bind = SUPER,Tab,cyclenext,          # change focus to another window
+bind = SUPER,Tab,bringactivetotop,   # bring it to the top
 
 # Keyboard Control Function
 binde = , XF86AudioRaiseVolume, exec, pactl -- set-sink-volume 0 +1% && pactl get-sink-volume @DEFAULT_SINK@ | head -n 1| awk '{print substr($5, 1, length($5)-1)}' > $WOBSOCK
@@ -158,8 +158,13 @@ bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 
+# Scroll through existing workspaces with mainMod + scroll
+bind = $mainMod, mouse_down, workspace, e+1
+bind = $mainMod, mouse_up, workspace, e-1
+
 # Switch workspaces with mainMod + [0-9]
-bind = $mainMod, TAB, workspace, previous
+bind = $mainMod, n, workspace, e+1 
+bind = $mainMod, p, workspace, e-1 
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
@@ -182,10 +187,6 @@ bind = $mainMod SHIFT, 7, movetoworkspace, 7
 bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
-
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
