chore(utils): update some config;

--- a/utils/.config/fontconfig/fonts.conf
+++ b/utils/.config/fontconfig/fonts.conf
@@ -196,6 +196,7 @@
       <string>monospace</string>
     </test>
     <edit name="family" mode="prepend" binding="strong">
+      <string>Jetbrains Mono</string>
       <string>DejaVu Sans Mono</string>
       <string>Ume Mincho</string>
       <string>HanaMinA</string>
@@ -276,6 +277,7 @@
       <string>monospace</string>
     </test>
     <edit name="family" mode="prepend" binding="strong">
+      <string>Jetbrains Mono</string>
       <string>DejaVu Sans Mono</string>
       <string>Source Han Sans</string>
     </edit>
@@ -318,6 +320,7 @@
       <string>monospace</string>
     </test>
     <edit name="family" mode="prepend" binding="strong">
+      <string>Jetbrains Mono</string>
       <string>DejaVu Sans Mono</string>
       <string>Source Han Sans</string>
     </edit>
@@ -366,6 +369,7 @@
       <string>monospace</string>
     </test>
     <edit name="family" mode="prepend" binding="strong">
+      <string>Jetbrains Mono</string>
       <string>DejaVu Sans Mono</string>
       <string>Source Han Sans</string>
     </edit>
@@ -411,8 +415,8 @@
       <string>Jetbrains Mono</string>
       <string>文泉驿等宽正黑</string>
       <!-- Font Awesome has monocolor ⛩ but let's use Twemoji's colorful one -->
-      <string>Symbols Nerd Font</string>
       <string>Twemoji</string>
+      <string>Symbols Nerd Font</string>
       <string>Font Awesome 6 Free</string>
       <string>Font Awesome 6 Brands</string>
       <!-- Noto Sans Symbols has weird height for 🅥 -->
