--- a/utils/.gitconfig
+++ b/utils/.gitconfig
@@ -1,6 +1,9 @@
 [user]
 	email = 2268136725@qq.com
 	name = iFlygo
+	signingKey = 102CAF4D17B1F4FFF5E60F49EAA85BCFCA55511D
 [core]
 	editor = nvim
 	quotepath = false
+[commit]
+	gpgsign = true
