--- a/wm/.config/hypr/hyprland.conf
+++ b/wm/.config/hypr/hyprland.conf
@@ -129,7 +129,7 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, E, exec, alacritty -t 'LF Manager' -e lf
 bind = $mainMod, F, togglefloating,
 bind = $mainMod, R, exec, tofi-drun --prompt-text "drun: " | xargs hyprctl dispatch -- exec
-bind = $mainMod, P, pseudo, # dwindle
+# bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, A, exec, slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | swappy -f - -o -  | wl-copy --type image/png
 
