--- a/wm/.config/hypr/hyprland.conf
+++ b/wm/.config/hypr/hyprland.conf
@@ -38,7 +38,7 @@ input {
     kb_options = caps:escape 
     kb_rules =
 
-    repeat_rate = 40
+    repeat_rate = 50
     repeat_delay = 500
 
     follow_mouse = 1
@@ -124,33 +124,38 @@ bind = CTRL_ALT, Backspace, exit,
 bind = $mainMod, T, exec, [workspace 2] alacritty
 bind = SUPER_SHIFT, T, exec, [float] alacritty
 bind = $mainMod, O, exec, [workspace 3] obsidian
-bind = $mainMod, B, exec, [workspace 1] firefox
+bind = $mainMod, B, exec, [workspace 1] firefox-developer-edition
 bind = $mainMod, C, killactive,
 bind = $mainMod, E, exec, alacritty -t 'LF Manager' -e lf
 bind = $mainMod, F, togglefloating,
 bind = $mainMod, R, exec, tofi-drun --prompt-text "drun: " | xargs hyprctl dispatch -- exec
-# bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, A, exec, slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | swappy -f - -o -  | wl-copy --type image/png
 
 bind = $mainMod, V, exec, cliphist list | tofi --prompt-text "Clip: " | cliphist decode | wl-copy
-bind = $mainMod, L, exec, swaylock
+bind = $mainMod, L, exec, swaylock -f
 
 # to switch between windows in a floating workspace
 bind = SUPER,Tab,cyclenext,          # change focus to another window
 bind = SUPER,Tab,bringactivetotop,   # bring it to the top
 
 # Keyboard Control Function
-binde = , XF86AudioRaiseVolume, exec, pactl -- set-sink-volume 0 +1% && pactl get-sink-volume @DEFAULT_SINK@ | head -n 1| awk '{print substr($5, 1, length($5)-1)}' > $WOBSOCK
-binde = , XF86AudioLowerVolume, exec, pactl -- set-sink-volume 0 -1% && pactl get-sink-volume @DEFAULT_SINK@ | head -n 1| awk '{print substr($5, 1, length($5)-1)}' > $WOBSOCK
-binde = , XF86AudioMute, exec, pactl -- set-sink-mute 0 toggle
-binde = , XF86AudioMicMute, exec, pactl -- set-source-mute 0 toggle
-binde = , XF86MonBrightnessUp, exec, light -A 5 && light -G | cut -d'.' -f1 > $WOBSOCK
-binde = , XF86MonBrightnessDown, exec, light -U 5 && light -G | cut -d'.' -f1 > $WOBSOCK
+bindle = , XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
+bindle = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bindle = , XF86AudioRaiseVolume, exec, wpctl get-volume @DEFAULT_AUDIO_SINK@ | awk '{print int($2*100)}' > $WOBSOCK
+bindle = , XF86AudioLowerVolume, exec, wpctl get-volume @DEFAULT_AUDIO_SINK@ | awk '{print int($2*100)}' > $WOBSOCK
 
-binde = , XF86AudioPlay, exec, playerctl play-pause
-binde = , XF86AudioNext, exec, playerctl next
-binde = , XF86AudioPrev, exec, playerctl previous
+bind = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bind = , XF86AudioMute, exec, wpctl get-volume @DEFAULT_AUDIO_SINK@ | awk '{if ($3) print 0; else print int($2*100)}' > $WOBSOCK
+bind = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+
+bindle = , XF86MonBrightnessUp, exec, light -A 5 && light -G | cut -d'.' -f1 > $WOBSOCK
+bindle = , XF86MonBrightnessDown, exec, light -U 5 && light -G | cut -d'.' -f1 > $WOBSOCK
+
+bindle = , XF86AudioPlay, exec, playerctl play-pause
+bindle = , XF86AudioNext, exec, playerctl next
+bindle = , XF86AudioPrev, exec, playerctl previous
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -163,8 +168,7 @@ bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
 # Switch workspaces with mainMod + [0-9]
-bind = $mainMod, n, workspace, e+1 
-bind = $mainMod, p, workspace, e-1 
+bind = $mainMod, Tab, workspace, e+1 
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
@@ -190,6 +194,7 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
+bindm = $mainMod, mouse:273, resizewindow
 
 # will switch to a submap called resize
 bind=$mainMod,S,submap,resize
