--- a/wm/.config/hypr/hyprland.conf
+++ b/wm/.config/hypr/hyprland.conf
@@ -10,8 +10,15 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor = eDP-1,2880x1800@90,auto,2,bitdepth,10
 
-# used by wob
+# Variables
+$BROWSER = firefox
+$mainMod = SUPER
+
+# Enviroment
 env = WOBSOCK, $XDG_RUNTIME_DIR/wob.sock
+env = GTK_THEME, WhiteSur-Dark
+env = XCURSOR_THEME, WhiteSur-cursors
+# env = XCURSOR_SIZE, 24
 
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = dbus-update-activation-environment --all
@@ -23,9 +30,9 @@ exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 exec-once = swayidle -w timeout 300 'swaylock -f -c 000000' timeout 360 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' before-sleep 'swaylock -f -c 000000'
 exec-once = rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | wob
 exec-once = libinput-gestures
-exec = swaybg -i ~/wallpaper.jpg -m fill
+exec-once = /home/chauncey/.scripts/gsettings.sh
+exec = pkill swaybg; swaybg -i ~/wallpaper.jpg -m fill
 exec = pkill waybar; waybar
-exec = /home/chauncey/.scripts/gsettings.sh
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -55,7 +62,7 @@ general {
 
     gaps_in = 0
     gaps_out = 0
-    border_size = 2
+    border_size = 1
     col.active_border = rgba(33ccffee)
     col.inactive_border = rgba(595959aa)
 
@@ -63,7 +70,7 @@ general {
 }
 
 decoration {
-    rounding = 4
+    rounding = 8
     multisample_edges = true
     blur = true
     blur_new_optimizations = true
@@ -95,7 +102,6 @@ gestures {
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-# windowrulev2 = maximize,class:^(firefox)$
 windowrulev2 = float,class:^(org.telegram.desktop)$
 windowrulev2 = float,class:^(org.fcitx.fcitx5-config-qt)$
 windowrulev2 = float,class:^(firefox)$,title:^(Library)$
@@ -105,6 +111,7 @@ windowrulev2 = float,class:^(Element)$
 windowrulev2 = float,class:^(steam)$
 windowrulev2 = float,class:^(org.qbittorrent.qBittorrent)$
 windowrulev2 = float,class:^(org.wireshark.Wireshark)$
+windowrulev2 = float,class:^(com.github.wwmm.easyeffects)$
 windowrulev2 = float,class:^(mpv)$
 windowrulev2 = float,class:^(steam)$
 windowrulev2 = float,class:^(anki)$
@@ -114,9 +121,6 @@ windowrulev2 = float,title:^(Htop)$
 windowrulev2 = float,title:^Blender*
 windowrulev2 = workspace 4 silent,class:^(mpv)$
 
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
-$mainMod = SUPER
-
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 # bind=MODS,key,dispatcher,params
 bind = CTRL_ALT, Backspace, exit,
@@ -124,14 +128,15 @@ bind = CTRL_ALT, Backspace, exit,
 bind = $mainMod, T, exec, [workspace 2] alacritty
 bind = SUPER_SHIFT, T, exec, [float] alacritty
 bind = $mainMod, O, exec, [workspace 3] obsidian
-bind = $mainMod, B, exec, [workspace 1] firefox-developer-edition
+bind = $mainMod, B, exec, [workspace 1] $BROWSER
 bind = $mainMod, C, killactive,
 bind = $mainMod, E, exec, alacritty -t 'LF Manager' -e lf
 bind = $mainMod, F, togglefloating,
 bind = $mainMod, R, exec, tofi-drun --prompt-text "drun: " | xargs hyprctl dispatch -- exec
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, A, exec, slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | swappy -f - -o -  | wl-copy --type image/png
+bind = $mainMod, A, exec, slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | wl-copy --type image/png
+bind = SUPER_SHIFT, A, exec, slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | swappy -f - -o -  | wl-copy --type image/png
 
 bind = $mainMod, V, exec, cliphist list | tofi --prompt-text "Clip: " | cliphist decode | wl-copy
 bind = $mainMod, L, exec, swaylock -f
