--- a/wm/.config/tofi/config
+++ b/wm/.config/tofi/config
@@ -13,7 +13,7 @@
 	# characters not in the chosen font will fail to render.
 	#
 	# Otherwise, fonts are interpreted in Pango format.
-	font = "Jetbrains Mono"
+	font = "Jetbrains Mono Nerd Font"
 
 	# Point size of text.
 	font-size = 14
@@ -236,7 +236,7 @@
 ### Behaviour
 #
 	# Hide the mouse cursor.
-	hide-cursor = false
+	hide-cursor = true
 
 	# Show a text cursor in the input field.
 	text-cursor = true
@@ -250,7 +250,7 @@
 	# history-file = /path/to/histfile
 
 	# Use fuzzy matching for searches.
-	fuzzy-match = false
+	fuzzy-match = true
 
 	# If true, require a match to allow a selection to be made. If false,
 	# making a selection with no matches will print input to stdout.
@@ -268,7 +268,7 @@
 
 	# If true, directly launch applications on selection when in drun mode.
 	# Otherwise, just print the command line to stdout.
-	drun-launch = false
+	drun-launch = true
 
 	# The terminal to run terminal programs in when in drun mode.
 	# This option has no effect if drun-launch is set to true.
