chore(wm): update config;

--- a/wm/.config/wob/wob.ini
+++ b/wm/.config/wob/wob.ini
@@ -1,12 +1,5 @@
 ; WOB CONFIG
 ; ============================
-bar_color        = 5291e2FF 
-border_color     = 4B5162FF 
-background_color = 383C4AEE 
-anchor           = top center 
-overflow_mode    = wrap
-output_mode      = focused
-timeout          = 1000
-max              = 100
+anchor = top
 
 ; vim: set ft=dosini:
