--- a/utils/.scripts/base.yml
+++ b/utils/.scripts/base.yml
@@ -11,7 +11,7 @@ redir-port: 7892
 tproxy-port: 7893
 allow-lan: false
 log-level: silent
-mode: global
+mode: Rule
 external-controller: '127.0.0.1:9090'
 secret: ''
 dns:
