--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "terminal/.config/alacritty/catppuccin"]
 	path = terminal/.config/alacritty/catppuccin
 	url = git@github.com:catppuccin/alacritty.git
+[submodule "submodules/dotbot"]
+	path = submodules/dotbot
+	url = https://github.com/anishathalye/dotbot
+	ignore = dirty
