--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -16,7 +16,7 @@ window:
     x: 0
     y: 0
   dynamic_padding: true
-  opacity: 0.85
+  opacity: 1
   # Window decorations
   decorations: none  # full/none/buttonless/transparent
   startup_mode: Windowed # Maximized/Windowed/Fullscreen
@@ -29,7 +29,7 @@ scrolling:
 
 font:
     normal:
-      family: "Jetbrains Mono Nerd Font"
+      family: Jetbrains Mono
       style: Regular
     size: 13
     #  bold:
