--- a/utils/fontconfig/font.conf
+++ b/utils/fontconfig/font.conf
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" ?>
-<!DOCTYPE fontconfig SYSTEM "fonts.dtd">
+<?xml version="1.0"?>
+<!DOCTYPE fontconfig SYSTEM "urn:fontconfig:fonts.dtd">
 <fontconfig>
 
   <!-- Default system-ui fonts -->
@@ -20,7 +20,7 @@
     <edit name="family" mode="prepend" binding="strong">
       <string>Noto Sans CJK SC</string>
       <string>Noto Sans</string>
-      <string>Noto Color Emoji</string>
+      <string>Twemoji</string>
     </edit>
   </match>
 
@@ -32,7 +32,7 @@
     <edit name="family" mode="prepend" binding="strong">
       <string>Noto Serif CJK SC</string>
       <string>Noto Serif</string>
-      <string>Noto Color Emoji</string>
+      <string>Twemoji</string>
     </edit>
   </match>
 
@@ -42,9 +42,10 @@
       <string>monospace</string>
     </test>
     <edit name="family" mode="prepend" binding="strong">
-      <string>Jetbrains Mono</string>
-      <string>Symbols Nerd Font Mono</string>
-      <string>Noto Color Emoji</string>
+      <string>JetBrains Mono</string>
+      <string>Noto Sans Mono CJK SC</string>
+      <string>Symbols Nerd Font</string>
+      <string>Twemoji</string>
     </edit>
   </match>
 
@@ -53,7 +54,7 @@
       <string>chrome</string>
     </test>
     <test name="family" compare="contains">
-      <string>Noto Sans Mono CJK SC</string>
+      <string>Noto Sans Mono CJK</string>
     </test>
     <edit name="family" mode="prepend" binding="strong">
       <string>Iosevka Term</string>
@@ -232,7 +233,7 @@
       <string>en</string>
     </test>
     <test name="family" compare="contains">
-      <string>Noto Serif CJK SC</string>
+      <string>Noto Serif CJK</string>
     </test>
     <edit name="family" mode="prepend" binding="strong">
       <string>Noto Serif</string>
