--- a/wm/hypr/hyprland.conf
+++ b/wm/hypr/hyprland.conf
@@ -24,18 +24,15 @@ exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESK
 exec-once = dbus-update-activation-environment --all
 # exec-once = xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
 exec-once = mako
-exec-once = env LANG=zh_CN.UTF-8 fcitx5 -d
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 exec-once = swayidle -w timeout 300 'swaylock -f -c 000000' timeout 360 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' before-sleep 'swaylock -f -c 000000'
 exec-once = rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | wob
 exec-once = libinput-gestures
 exec-once = /home/chauncey/.scripts/gsettings.sh
+exec = pkill fcitx5; env LANG=zh_CN.UTF-8 fcitx5 -d
 exec = pkill swaybg; swaybg -i ~/wallpaper.jpg -m fill
 exec = pkill waybar; waybar
-
-# Source a file (multi-file configs)
-# source = ~/.config/hypr/myColors.conf
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -62,7 +59,7 @@ general {
 
     gaps_in = 0
     gaps_out = 0
-    border_size = 1
+    border_size = 0
     col.active_border = rgba(33ccffee)
     col.inactive_border = rgba(595959aa)
 
@@ -72,7 +69,7 @@ general {
 decoration {
     rounding = 8
     multisample_edges = true
-    blur = true
+    blur = false
     blur_new_optimizations = true
 }
 
@@ -97,14 +94,10 @@ gestures {
     workspace_swipe = true
 }
 
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = float,class:^(org.telegram.desktop)$
 windowrulev2 = float,class:^(org.fcitx.fcitx5-config-qt)$
 windowrulev2 = float,class:^(firefox)$,title:^(Library)$
+windowrulev2 = float,class:^(firefox)$,title:^(Picture-in-Picture)$
 windowrulev2 = float,class:^transmission*
 windowrulev2 = size 50%, 50%,class:^transmission*
 windowrulev2 = float,class:^(Element)$
@@ -120,6 +113,7 @@ windowrulev2 = float,title:^(LF Manager)$
 windowrulev2 = float,title:^(Htop)$
 windowrulev2 = float,title:^Blender*
 windowrulev2 = workspace 4 silent,class:^(mpv)$
+windowrulev2 = workspace 5,class:code*
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 # bind=MODS,key,dispatcher,params
@@ -132,7 +126,8 @@ bind = $mainMod, B, exec, [workspace 1] $BROWSER
 bind = $mainMod, C, killactive,
 bind = $mainMod, E, exec, alacritty -t 'LF Manager' -e lf
 bind = $mainMod, F, togglefloating,
-bind = $mainMod, R, exec, tofi-drun --prompt-text "drun: " | xargs hyprctl dispatch -- exec
+# bind = $mainMod, R, exec, tofi-drun --prompt-text "drun: " | xargs hyprctl dispatch -- exec
+bind = $mainMod, R, exec, rofi -show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, A, exec, slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | wl-copy --type image/png
@@ -161,6 +156,8 @@ bindle = , XF86MonBrightnessDown, exec, light -U 5 && light -G | cut -d'.' -f1 >
 bindle = , XF86AudioPlay, exec, playerctl play-pause
 bindle = , XF86AudioNext, exec, playerctl next
 bindle = , XF86AudioPrev, exec, playerctl previous
+
+bindle = , Print, exec, grim - | wl-copy --type image/png
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -218,3 +215,5 @@ binde=,j,resizeactive,0 10
 bind=,escape,submap,reset 
 # will reset the submap, meaning end the current one and return to the global one
 submap=reset
+
+# vim: set ft=confini :
