--- a/wm/mpv/mpv.conf
+++ b/wm/mpv/mpv.conf
@@ -9,12 +9,14 @@ msg-module=yes                          # prepend module name to log messages
 term-osd-bar=yes                        # displays a progress bar on the terminal
 
 # ===== Video =====
-gpu-context=wayland
+profile=gpu-hq
+gpu-context=auto
 gpu-api=vulkan
 autofit-larger=75%x75% 
 hwdec=auto
-# hwdec-codecs=all
-# vo=gpu # <gpu|gpu-next>
+hwdec-codecs=all
+vo=gpu-next # <gpu|gpu-next>
+vd-lavc-dr=auto # <默认auto|yes|no> 是否直接解码到显存，个别低端英特尔处理器可能需要显式禁用此功能以大幅提速解码
 
 
 # ===== OSD =====
@@ -93,4 +95,13 @@ prefetch-playlist=yes                   # prefetches the playlist
 # ===== Others =====
 
 script-opts=ytdl_hook-ytdl_path=yt-dlp
+load-auto-profiles=auto # <yes|no|默认auto> 新版条件配置预设（使用旧版外挂的用户记得禁用）
+load-osd-console=yes  # 控制台，默认 yes
+load-stats-overlay=yes  # 统计信息，默认 yes
+osc=yes  # [使用部分同类脚本的前置条件(no)] 禁用原OSC（即内置的"osc.lua"脚本）以兼容第三方的界面样式，默认 yes
+ytdl=yes  # 网址解析增强，默认 yes
+ytdl-raw-options-append =
+                                # [当 --ytdl=yes 时有效] 将自定义的选项传递给ytdl，默认为空 https://github.com/ytdl-org/youtube-dl#options
+                                # 示例（ cookies-from-browser=firefox ）仅为传递单个选项，多个选项最好独立追加，即写多个 --ytdl-raw-options-append 参数
 
+ load-scripts=yes       # 自动挂载 /scripts/ 目录中的所有外置脚本，默认 yes。设置为no时可用下一行示例的命令加载指定的外置脚本
