--- a/wm/tofi/config
+++ b/wm/tofi/config
@@ -13,7 +13,7 @@
 	# characters not in the chosen font will fail to render.
 	#
 	# Otherwise, fonts are interpreted in Pango format.
-	font = "Jetbrains Mono Nerd Font"
+	font = "Jetbrains Mono"
 
 	# Point size of text.
 	font-size = 14
