feat(wm): add sway config and adjust waybar settings;

--- a/wm/hypr/hyprland.conf
+++ b/wm/hypr/hyprland.conf
@@ -1,5 +1,5 @@
 # Variables
-$BROWSER = firefox
+$BROWSER = firefox-developer-edition
 $TERMINAL = alacritty
 $mainMod = SUPER
 
@@ -36,7 +36,7 @@ exec = pkill waybar; waybar
 
 # AutoStartup APP
 exec-once = sleep 2; telegram-desktop; hyprctl dispatch closewindow org.telegram.desktop
-exec-once = sleep 2; firefox
+exec-once = sleep 2; $BROWSER
 exec-once = sleep 2; hyprctl dispatch exec [workspace 2 silent] alacritty;
 
 # Hyprland Settings
@@ -75,7 +75,7 @@ general {
 decoration {
     rounding = 12
     multisample_edges = true
-    blur = true
+    blur = false
     blur_size = 2
     blur_new_optimizations = true
 }
@@ -124,14 +124,14 @@ windowrulev2 = size 50%,class:^(org.telegram.desktop)$,title:^(Media viewer)$
 windowrulev2 = float,class:^(org.fcitx.fcitx5-config-qt)$
 
 # Firefox
-windowrulev2 = float,class:^(firefox)$,title:^(Library)$
+windowrulev2 = float,class:^(firefoxdeveloperedition)$,title:^(Library)$
 
-windowrulev2 = float,class:^(firefox)$,title:^(Picture-in-Picture)$
-windowrulev2 = pin,class:^(firefox)$,title:^(Picture-in-Picture)$
-windowrulev2 = nofullscreenrequest,class:^(firefox)$,title:^(Picture-in-Picture)$
+windowrulev2 = float,class:^(firefoxdeveloperedition)$,title:^(Picture-in-Picture)$
+windowrulev2 = pin,class:^(firefoxdeveloperedition)$,title:^(Picture-in-Picture)$
+windowrulev2 = nofullscreenrequest,class:^(firefoxdeveloperedition)$,title:^(Picture-in-Picture)$
 
-windowrulev2 = float,class:^(firefox)$,title:^(Firefox)$
-windowrulev2 = float,class:^(firefox)$,title:^(Developer Tools — .*)$
+windowrulev2 = float,class:^(firefoxdeveloperedition)$,title:^(Firefox)$
+windowrulev2 = float,class:^(firefoxdeveloperedition)$,title:^(Developer Tools — .*)$
 windowrulev2 = float,class:^transmission*
 windowrulev2 = float,class:^(virt-manager)$
 windowrulev2 = size 50%, 50%,class:^transmission*
@@ -164,7 +164,7 @@ bind = CTRL_ALT, Backspace, exit,
 
 bind = $mainMod, T, exec, $TERMINAL
 bind = SUPER_SHIFT, T, exec, [float] $TERMINAL
-bind = $mainMod, O, exec, obsidian
+bind = $mainMod, O, exec, hyprctl dispatch exec [workspace 3] obsidian
 bind = $mainMod, B, exec, $BROWSER
 bind = $mainMod, C, killactive
 bind = $mainMod, E, exec, alacritty -t 'LF Manager' -e lf
