chore(tmux): tmux should use nologin shell;

--- a/utils/.tmux.conf
+++ b/utils/.tmux.conf
@@ -10,6 +10,7 @@
 # -- general -------------------------------------------------------------------
 
 set -g default-terminal "screen-256color"
+set -g default-command "${SHELL}"
 if 'infocmp -x tmux-256color > /dev/null 2>&1' 'set -g default-terminal "tmux-256color"'
 
 setw -g xterm-keys on
@@ -170,6 +171,7 @@ bind P choose-buffer    # choose which buffer to paste from
 # -- 8< ------------------------------------------------------------------------
 
 source -q ~/.tmux.conf.local
+source-file ~/.tokyonight.tmux
 run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 
 
