--- a/utils/scripts/base.yml
+++ b/utils/scripts/base.yml
@@ -10,7 +10,7 @@ socks-port: 7891
 redir-port: 7892
 tproxy-port: 7893
 allow-lan: false
-log-level: silent
+log-level: info
 mode: Rule
 external-controller: '127.0.0.1:9090'
 secret: ''
