--- a/wm/hypr/hyprland.conf
+++ b/wm/hypr/hyprland.conf
@@ -15,14 +15,18 @@ env = WOBSOCK, $XDG_RUNTIME_DIR/wob.sock
 env = GTK_THEME, WhiteSur-Dark
 env = XCURSOR_THEME, WhiteSur-cursors
 env = CLION_VM_OPTIONS, $HOME/dotfiles/utils/scripts/jetbra/vmoptions/clion.vmoptions
-# env = XCURSOR_SIZE, 48
+# env = XCURSOR_SIZE, 24
+# XDG Specifications
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
+env = XDG_SESSION_DESKTOP,Hyprland
 
 # Startup
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = dbus-update-activation-environment --all
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
-exec-once = xrdb -merge <<< 'Xft.dpi: 192'
+exec-once = xrdb ~/.Xresources
 exec-once = mako
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
@@ -31,7 +35,7 @@ exec-once = rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | wob
 exec-once = $HOME/.scripts/gsettings.sh
 exec-once = $HOME/.config/hypr/xdg.sh
 exec = pkill fcitx5; env LANG=zh_CN.UTF-8 fcitx5 -d
-exec = pkill swaybg; swaybg -i $HOME/.config/hypr/wallpaper.jpg -m fill
+exec = pkill swaybg; swaybg -i $HOME/.config/hypr/wallpaper/WhiteSur.jpg -m fill
 exec = pkill waybar; waybar
 
 # AutoStartup APP
@@ -48,7 +52,7 @@ input {
     kb_options = caps:escape 
     kb_rules =
 
-    repeat_rate = 50
+    repeat_rate = 45
     repeat_delay = 500
 
     follow_mouse = 1
@@ -64,16 +68,16 @@ input {
 general {
     no_border_on_floating = true
     no_cursor_warps = true
-    gaps_in = 0
-    gaps_out = 0
+    gaps_in = 1
+    gaps_out = 2
     border_size = 0
-    resize_on_border = true
+    # resize_on_border = true
 
     layout = dwindle
 }
 
 decoration {
-    rounding = 12
+    rounding = 0
     multisample_edges = true
     blur = false
     blur_size = 2
@@ -127,11 +131,9 @@ windowrulev2 = float,class:^(org.fcitx.fcitx5-config-qt)$
 windowrulev2 = float,class:^(firefoxdeveloperedition)$,title:^(Library)$
 
 windowrulev2 = float,class:^(firefoxdeveloperedition)$,title:^(Picture-in-Picture)$
-windowrulev2 = pin,class:^(firefoxdeveloperedition)$,title:^(Picture-in-Picture)$
 windowrulev2 = nofullscreenrequest,class:^(firefoxdeveloperedition)$,title:^(Picture-in-Picture)$
+windowrulev2 = float,class:^(firefoxdeveloperedition)$,title:^(About Firefox Developer Edition)$
 
-windowrulev2 = float,class:^(firefoxdeveloperedition)$,title:^(Firefox)$
-windowrulev2 = float,class:^(firefoxdeveloperedition)$,title:^(Developer Tools — .*)$
 windowrulev2 = float,class:^transmission*
 windowrulev2 = float,class:^(virt-manager)$
 windowrulev2 = size 50%, 50%,class:^transmission*
@@ -242,7 +244,7 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # will switch to a submap called resize
-bind=$mainMod,S,submap,resize
+bind=$mainMod,M,submap,resize
 # will start a submap called "resize"
 submap=resize
 # sets repeatable binds for resizing the active window
