--- a/wm/sway/config
+++ b/wm/sway/config
@@ -1,94 +1,101 @@
 ### Variables
 set $mod Mod4
-# set $left h
-# set $down j
-# set $up k
-# set $right l
 set $TERMINAL alacritty
 set $BROWSER firefox-developer-edition
 
 ### Monitor
-#   output HDMI-A-1 resolution 1920x1080 position 1920,0
+# output HDMI-A-1 resolution 1920x1080 position 1920,0
 output eDP-1 mode 2880x1800 scale 2
 
-### Input configuration
-#
-# Example configuration:
-#
-#   input "2:14:SynPS/2_Synaptics_TouchPad" {
-#       dwt enabled
-#       tap enabled
-#       natural_scroll enabled
-#       middle_emulation enabled
-#   }
+### Input
 input "type:keyboard" {
     xkb_options caps:escape
     repeat_delay 500
     repeat_rate 30
+    natural_scroll enabled
 }
+
+input "type:touchpad" {
+    tap enabled
+}
+
+# hide mouse after 5 seconds inactivity
+seat * hide_cursor 5000
 
 ### General
 default_border none
 hide_edge_borders both
-# smart_borders on
-# smart_gaps on
 gaps inner 1
 gaps outer 2
 
-font pango:monospace 0
+# class                   border       backgr.      text         indicator    child_border
+# client.focused            $color1      $background  $foreground  $color6      $color1
+# client.focused_inactive   $background  $background  $foreground  $color3      $color3
+# client.unfocused          $background  $background  $foreground  $color3      $color3
+# client.urgent             $background  $background  $color7      $foreground  $foreground
+#
+# Ignored (present for i3 compatibility).
+#client.placeholder        #000000      #0c0c0c      #ffffff      #000000
+#client.background                      $background
 
+# Defaults to focused_inactive if not specified
+#client.focused_tab_title  #333333      #5f676a      #ffffff
 xwayland disable
 
 ### AutoStartup
-
 exec systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec dbus-update-activation-environment --all
 exec /usr/lib/polkit-kde-authentication-agent-1
 exec xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
-exec xrdb -merge <<< 'Xft.dpi: 192'
-exec mako
+exec xrdb ~/.Xresources
 exec wl-paste --type text --watch cliphist store #Stores only text data
 exec wl-paste --type image --watch cliphist store #Stores only image data
-exec swayidle -w timeout 300 'swaylock -f' timeout 360 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' before-sleep 'playctl pause' before-sleep 'swaylock'
+exec swayidle -w timeout 300 'swaylock -f' timeout 360 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' before-sleep 'playctl pause' before-sleep 'swaylock'
 exec rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | wob
-exec $HOME/.scripts/gsettings.sh
+exec $HOME/.config/hypr/gsettings.sh
 exec $HOME/.config/hypr/xdg.sh
+exec swaybg -i $HOME/.config/hypr/wallpaper/WhiteSur.png -m fill
 exec_always --no-startup-id env LANG=zh_CN.UTF-8 fcitx5 -d --replace
-exec_always swaybg -i $HOME/.config/hypr/wallpaper/WhiteSur.png -m fill
 
 # AutoStartup APP
 exec --no-startup-id "sleep 1; swaymsg 'workspace 2; exec alacritty; workspace back_and_forth'"
-exec --no-startup-id "sleep 2; swaymsg 'workspace 1; exec firefox-developer-edition; workspace back_and_forth'"
+exec --no-startup-id "sleep 1; swaymsg 'workspace 1; exec firefox-developer-edition; workspace back_and_forth'"
+exec --no-startup-id "sleep 2; swaymsg 'workspace 1; exec telegram-desktop; move scratchpad'"
 
 
-### Key bindings
+### Keybinds
+# Gestures
+bindgesture swipe:3:right workspace prev
+bindgesture swipe:3:left workspace next
+bindgesture swipe:3:up move scratchpad
+bindgesture swipe:3:down scratchpad show
 
-    bindsym $mod+b exec $BROWSER
-    bindsym $mod+o exec obsidian
-    bindsym Ctrl+Alt+Backspace exec swaynag -t warning -m 'Do you really want to exit sway' -b 'Yes, exit sway' 'swaymsg exit'
-    # Start a terminal
-    bindsym $mod+t exec $TERMINAL
-    bindsym $mod+Shift+t exec $TERMINAL
+# Exit Sway
+bindsym Ctrl+Alt+Backspace exec swaynag -t warning -m 'Do you really want to exit sway' -b 'Yes, exit sway' 'swaymsg exit'
 
-    # Kill focused window
-    bindsym $mod+c kill
+bindsym $mod+B exec $BROWSER
+bindsym $mod+O exec obsidian
 
-    # Start your launcher
-    bindsym $mod+r exec ~/.config/rofi/scripts/launcher_t1
-    bindsym $mod+a exec slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | wl-copy --type image/png
-    bindsym $mod+Shift+a exec slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | swappy -f - -o -  | wl-copy --type image/png
+# Start a terminal
+bindsym $mod+T exec $TERMINAL
+bindsym $mod+Shift+T exec alacritty --class "FLOAT"
 
-    bindsym $mod+v exec cliphist list | rofi -dmenu | cliphist decode | wl-copy
-    bindsym $mod+l exec swaylock -f
+# Kill focused window
+bindsym $mod+C kill
+
+# Start your launcher
+bindsym $mod+R exec ~/.config/rofi/scripts/launcher_t1
+bindsym $mod+A exec slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | wl-copy --type image/png
+bindsym $mod+Shift+A exec slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | swappy -f - -o -  | wl-copy --type image/png
+
+bindsym $mod+V exec cliphist list | rofi -dmenu | cliphist decode | wl-copy
+bindsym $mod+L exec swaylock -f
 
 # Keyboard Control Function
-bindsym --locked XF86AudioRaiseVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
-bindsym --locked XF86AudioLowerVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-# bindsym --locked XF86AudioRaiseVolume exec wpctl get-volume @DEFAULT_AUDIO_SINK@ | awk '{print int($2*100)}' > $WOBSOCK
-# bindsym --locked XF86AudioLowerVolume exec wpctl get-volume @DEFAULT_AUDIO_SINK@ | awk '{print int($2*100)}' > $WOBSOCK
+bindsym --locked XF86AudioRaiseVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+ | wpctl get-volume @DEFAULT_AUDIO_SINK@ | awk '{print int($2*100)}' > $WOBSOCK
+bindsym --locked XF86AudioLowerVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- | wpctl get-volume @DEFAULT_AUDIO_SINK@ | awk '{print int($2*100)}' > $WOBSOCK
 
-bindsym --locked XF86AudioMute exec wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-# bindsym --locked XF86AudioMute exec wpctl get-volume @DEFAULT_AUDIO_SINK@ | awk '{if ($3) print 0; else print int($2*100)}' > $WOBSOCK
+bindsym --locked XF86AudioMute exec wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle | wpctl get-volume @DEFAULT_AUDIO_SINK@ | awk '{if ($3) print 0; else print int($2*100)}' > $WOBSOCK
 bindsym --locked XF86AudioMicMute exec wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 
 bindsym --locked XF86MonBrightnessUp exec light -A 5 && light -G | cut -d'.' -f1 > $WOBSOCK
@@ -100,42 +107,82 @@ bindsym --locked XF86AudioPrev exec playerctl previous
 
 bindsym --locked Print exec grim - | wl-copy --type image/png
 
-
-
-    # Drag floating windows by holding down $mod and left mouse button.
-    # Resize them with right mouse button + $mod.
-    # Despite the name, also works for non-floating windows.
-    # Change normal to inverse to use left mouse button for resizing and right
-    # mouse button for dragging.
-    floating_modifier $mod normal
-
-    # Reload the configuration file
-    bindsym $mod+Shift+c reload
+floating_modifier $mod normal
+# Reload the configuration file
+bindsym $mod+Shift+R reload
 
 ### Windowrule
-
 # Inhibit Idle if a window is fullscreen
 for_window [class="^.*"] inhibit_idle fullscreen
 for_window [app_id="^.*"] inhibit_idle fullscreen
 
-for_window [window_type="dialog"] floating enable
-for_window [window_role="dialog"] floating enable
+for_window [window_role = "pop-up"] floating enable
+for_window [window_role = "bubble"] floating enable
+for_window [window_role = "dialog"] floating enable
+for_window [window_type = "dialog"] floating enable
+for_window [window_role = "task_dialog"] floating enable
+for_window [window_type = "menu"] floating enable
 
 for_window [app_id="imv"] {
     floating enable
     move center
 }
 
+for_window [app_id="code" title=".*Folder.*"] {
+    floating enable
+}
+
+for_window [app_id="org.telegram.desktop" title="Media viewer"] {
+    floating enable
+    move center
+    resize set [width] 40ppt [height] 40ppt
+}
+
+for_window [app_id="Alacritty"] {
+    border pixel 1
+}
+
+# Floating
 for_window [app_id="Alacritty" title="LF Manager"] floating enable
 for_window [app_id="Alacritty" title="Htop"] floating enable
-
+for_window [app_id="org.kde.polkit-kde-authentication-agent-1"] floating enable
 for_window [app_id="org.telegram.desktop"] floating enable
 for_window [app_id="org.qbittorrent.qBittorrent"] floating enable
-
+for_window [app_id="org.wireshark.Wireshark"] floating enable
+for_window [app_id="com.github.wwmm.easyeffects"] floating enable
+for_window [app_id="Element"] floating enable
+for_window [app_id="anki"] floating enable
 for_window [app_id="mpv"] floating enable
+for_window [app_id="FLOAT"] floating enable
+for_window [class="Blender Preferences"] floating enable
 
-for_window [app_id="firefoxdeveloperedition" title="About Firefox.*"] floating enable
-for_window [app_id="firefoxdeveloperedition" title="Picture-in-Picture"] floating enable
+# Steam
+# https://github.com/ValveSoftware/steam-for-linux/issues/1040
+for_window [class="^steam$" title="^Friends$"] floating enable
+for_window [class="^steam$" title="Steam - News"] floating enable
+for_window [class="^steam$" title=".* - Chat"] floating enable
+for_window [class="^steam$" title="^Settings$"] floating enable
+for_window [class="^steam$" title=".* - event started"] floating enable
+for_window [class="^steam$" title=".* CD key"] floating enable
+for_window [class="^steam$" title="^Steam - Self Updater$"] floating enable
+for_window [class="^steam$" title="^Screenshot Uploader$"] floating enable
+for_window [class="^steam$" title="^Steam Guard - Computer Authorization Required$"] floating enable
+for_window [title="^Steam Keyboard$"] floating enable
+
+# Firefox
+for_window [app_id="firefoxdeveloperedition" title="About Firefox Developer Edition"] floating enable
+for_window [app_id="firefoxdeveloperedition" title="Picture-in-Picture"] {
+    floating enable
+    resize set width 50 ppt
+}
+
+# Waybar Tooltips don't steel focus
+no_focus [app_id="waybar"]
+for_window [app_id="waybar" floating] {
+    move position cursor
+    move down 60px # adjust if some menus still don't fit
+}
+
 #
 # Moving around:
 #
@@ -163,49 +210,47 @@ for_window [app_id="firefoxdeveloperedition" title="Picture-in-Picture"] floatin
 #
 # Workspaces:
 #
-    # Switch to workspace
-    bindsym $mod+1 workspace number 1
-    bindsym $mod+2 workspace number 2
-    bindsym $mod+3 workspace number 3
-    bindsym $mod+4 workspace number 4
-    bindsym $mod+5 workspace number 5
-    bindsym $mod+6 workspace number 6
-    bindsym $mod+7 workspace number 7
-    bindsym $mod+8 workspace number 8
-    bindsym $mod+9 workspace number 9
-    bindsym $mod+0 workspace number 10
-    # Move focused container to workspace
-    bindsym $mod+Shift+1 move container to workspace number 1
-    bindsym $mod+Shift+2 move container to workspace number 2
-    bindsym $mod+Shift+3 move container to workspace number 3
-    bindsym $mod+Shift+4 move container to workspace number 4
-    bindsym $mod+Shift+5 move container to workspace number 5
-    bindsym $mod+Shift+6 move container to workspace number 6
-    bindsym $mod+Shift+7 move container to workspace number 7
-    bindsym $mod+Shift+8 move container to workspace number 8
-    bindsym $mod+Shift+9 move container to workspace number 9
-    bindsym $mod+Shift+0 move container to workspace number 10
-    # Note: workspaces can have any name you want, not just numbers.
-    # We just use 1-10 as the default.
+# Switch to workspace
+
+# bindsym $mod+Tab 
+
+bindsym $mod+1 workspace number 1
+bindsym $mod+2 workspace number 2
+bindsym $mod+3 workspace number 3
+bindsym $mod+4 workspace number 4
+bindsym $mod+5 workspace number 5
+bindsym $mod+6 workspace number 6
+bindsym $mod+7 workspace number 7
+bindsym $mod+8 workspace number 8
+bindsym $mod+9 workspace number 9
+bindsym $mod+0 workspace number 10
+# Move focused container to workspace
+bindsym $mod+Shift+1 move container to workspace number 1
+bindsym $mod+Shift+2 move container to workspace number 2
+bindsym $mod+Shift+3 move container to workspace number 3
+bindsym $mod+Shift+4 move container to workspace number 4
+bindsym $mod+Shift+5 move container to workspace number 5
+bindsym $mod+Shift+6 move container to workspace number 6
+bindsym $mod+Shift+7 move container to workspace number 7
+bindsym $mod+Shift+8 move container to workspace number 8
+bindsym $mod+Shift+9 move container to workspace number 9
+bindsym $mod+Shift+0 move container to workspace number 10
+
+# Note: workspaces can have any name you want, not just numbers.
+# We just use 1-10 as the default.
 #
 # Layout stuff:
 #
-    # You can "split" the current object of your focus with
-    # $mod+b or $mod+v, for horizontal and vertical splits
-    # respectively.
-    # bindsym $mod+b splith
-    # bindsym $mod+v splitv
+# You can "split" the current object of your focus with
+# $mod+b or $mod+v, for horizontal and vertical splits
+# respectively.
 
     # Switch the current container between different layout styles
-    bindsym $mod+s layout stacking
-    bindsym $mod+w layout tabbed
-    bindsym $mod+e layout toggle split
 
-    # Make the current focus fullscreen
-    bindsym $mod+f fullscreen
+    bindsym $mod+f floating toggle
 
     # Toggle the current focus between tiling and floating mode
-    bindsym $mod+Shift+space floating toggle
+    # bindsym $mod+Shift+space floating toggle
 
     # Swap focus between the tiling area and the floating area
     bindsym $mod+space focus mode_toggle
@@ -224,35 +269,26 @@ for_window [app_id="firefoxdeveloperedition" title="Picture-in-Picture"] floatin
     # Show the next scratchpad window or hide the focused scratchpad window.
     # If there are multiple scratchpad windows, this command cycles through them.
     bindsym $mod+minus scratchpad show
-#
-# Resizing containers:
-#
-# mode "resize" {
-#     # left will shrink the containers width
-#     # right will grow the containers width
-#     # up will shrink the containers height
-#     # down will grow the containers height
-#     bindsym $left resize shrink width 10px
-#     bindsym $down resize grow height 10px
-#     bindsym $up resize shrink height 10px
-#     bindsym $right resize grow width 10px
-#
-#     # Ditto, with arrow keys
-#     bindsym Left resize shrink width 10px
-#     bindsym Down resize grow height 10px
-#     bindsym Up resize shrink height 10px
-#     bindsym Right resize grow width 10px
-#
-#     # Return to default mode
-#     bindsym Return mode "default"
-#     bindsym Escape mode "default"
-# }
-# bindsym $mod+r mode "resize"
+
+mode "mode" {
+    bindsym $mod+s layout stacking
+    bindsym $mod+w layout tabbed
+    bindsym $mod+e layout toggle split
+    # Ditto, with arrow keys
+    bindsym Left resize shrink width 10px
+    bindsym Down resize grow height 10px
+    bindsym Up resize shrink height 10px
+    bindsym Right resize grow width 10px
+
+    bindsym $mod+b splith
+    bindsym $mod+v splitv
+
+    # Return to default mode
+    bindsym Escape mode "default"
+}
+bindsym $mod+m mode "mode"
 
 # Status Bar:
-
 bar {
   swaybar_command waybar
-  workspace_buttons yes
 }
-include @sysconfdir@/sway/config.d/*
