feat: add firefox-ui-fix repo, and update dotbot;

--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,7 @@
 	path = submodules/dotbot
 	url = https://github.com/anishathalye/dotbot
 	ignore = dirty
+[submodule "mozilla/profile/chrome"]
+	path = mozilla/profile/chrome
+	url = https://github.com/black7375/Firefox-UI-Fix.git
+	branch = proton-style
